...
            nameOf = { it.name }
        )
    }

    Column(modifier = Modifier.fillMaxSize()) {
        Text(
            text = "Choose Target Language",
            style = MaterialTheme.typography.titleMedium,
            fontStyle = FontStyle.Italic,
            color = MaterialTheme.colorScheme.onSurfaceVariant,
            modifier = Modifier.padding(horizontal = 16.dp, vertical = 16.dp)
        )
        LazyColumn(modifier = Modifier.fillMaxSize()) {
...
