appId: bible.translationtools.recorder
---
# MainMenuNavigationFlowTest.recordWithoutActiveProjectGoesToProjectManagement
# Assumes main menu, no active project. Leaves app on main menu.
- runFlow: dismiss-anr-if-visible.yaml
- repeat:
    times: 20
    while:
      notVisible: "Project Management"
    commands:
      - tapOn: "Record"
- assertVisible: "Project Management"

- pressKey: back
- extendedWaitUntil:
    visible: "Files"
    timeout: 3000
